--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^17.2.1",
     "express": "^4.21.2",
-    "nodemailer": "^7.0.5"
+    "nodemailer": "^7.0.5",
+    "toastify": "^2.0.1"
   }
 }
